# aws-sample-python-local-development

./: .gitignore  Makefile  README.md  pyproject.toml  samconfig.yaml  template.yaml
layers/shared_layer_one/: utils_one.py
layers/shared_layer_two/: utils_two.py
src/another_lambda/: handler.py
src/my_lambda/: handler.py
tests/: test_another_lambda.py  test_my_lambda.py
tests/layers/: test_shared_layer_one.py  test_shared_layer_two.py
